<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <!--<item-->
        <!--android:id="@+id/nav_1"-->
        <!--android:icon="@drawable/ic_discuss"-->
        <!--android:title="@string/title0_1" />-->
        <item
            android:id="@+id/nav_1"
            android:icon="@drawable/ic_menu"
            android:title="@string/title1"/>

        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/title2"/>

        <item
            android:id="@+id/nav_3"
            android:icon="@drawable/ic_forum"
            android:title="@string/title3"/>
        <item
            android:id="@+id/nav_4"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/title4"/>
    </group>

    <item android:title="Дополнительно">
        <menu>
            <item
                android:id="@+id/nav_5"
                android:icon="@drawable/ic_discuss"
                android:title="О приложении"/>
        </menu>
    </item>

</menu>
